@@ -1,5 +1,0 @@
-target(
-    dependencies = [
-        "util/util-class-preloader/src/main/java",
-    ],
-)
