@@ -1,5 +1,0 @@
-java_agent(
-    sources = rglobs("*.java"),
-    can_retransform = True,
-    premain = "com.twitter.classpreloader.ClassPreloader",
-)
