@@ -1,3 +1,0 @@
-Manifest-Version: 1.0
-Premain-Class: com.twitter.classpreloader.ClassPreloader
-Can-Retransform-Classes: true
