@@ -1,4 +1,8 @@
 target(
+    tags = {
+        # Legacy code that shouldn't be used for new services.
+        "deprecated",
+    },
     dependencies = [
         "util/util-reflect/src/main/scala",
     ],
