@@ -10,10 +10,12 @@ import com.twitter.util.Future
 class NonexistentTargetException extends Exception("MethodCall was invoked without a valid target.")
 
 object Proxy {
+  @deprecated("Legacy code that shouldn't be used for new services", "2018-05-25")
   def apply[I <: AnyRef: Manifest](f: MethodCall[I] => AnyRef) = {
     new ProxyFactory[I](f).apply()
   }
 
+  @deprecated("Legacy code that shouldn't be used for new services", "2018-05-25")
   def apply[I <: AnyRef: Manifest](target: I, f: MethodCall[I] => AnyRef) = {
     new ProxyFactory[I](f).apply(target)
   }
@@ -47,10 +49,12 @@ class AbstractProxyFactory[I <: AnyRef: Manifest] {
     e.create.asInstanceOf[Factory]
   }
 
+  @deprecated("Legacy code that shouldn't be used for new services", "2018-05-25")
   protected final def newWithCallback(f: MethodCall[I] => AnyRef) = {
     proto.newInstance(Array(new MethodInterceptor(None, f), NoOp.INSTANCE)).asInstanceOf[I]
   }
 
+  @deprecated("Legacy code that shouldn't be used for new services", "2018-05-25")
   protected final def newWithCallback[T <: I](target: T, f: MethodCall[I] => AnyRef) = {
     proto.newInstance(Array(new MethodInterceptor(Some(target), f), NoOp.INSTANCE)).asInstanceOf[I]
   }
@@ -58,7 +62,9 @@ class AbstractProxyFactory[I <: AnyRef: Manifest] {
 
 class ProxyFactory[I <: AnyRef: Manifest](f: MethodCall[I] => AnyRef)
     extends AbstractProxyFactory[I] {
+  @deprecated("Legacy code that shouldn't be used for new services", "2018-05-25")
   def apply[T <: I](target: T) = newWithCallback(target, f)
+  @deprecated("Legacy code that shouldn't be used for new services", "2018-05-25")
   def apply() = newWithCallback(f)
 }
 
@@ -69,6 +75,7 @@ private[reflect] class MethodInterceptor[I <: AnyRef](
     with Serializable {
   val targetRef = target.getOrElse(null).asInstanceOf[I]
 
+  @deprecated("Legacy code that shouldn't be used for new services", "2018-05-25")
   final def intercept(p: AnyRef, m: Method, args: Array[AnyRef], methodProxy: MethodProxy) = {
     callback(new MethodCall(targetRef, m, args, methodProxy))
   }
@@ -83,22 +90,32 @@ final class MethodCall[T <: AnyRef] private[reflect] (
 
   lazy val target = if (targetRef ne null) Some(targetRef) else None
 
+  @deprecated("Legacy code that shouldn't be used for new services", "2018-05-25")
   def clazz = method.getDeclaringClass
+  @deprecated("Legacy code that shouldn't be used for new services", "2018-05-25")
   def clazzName = clazz.getName
+  @deprecated("Legacy code that shouldn't be used for new services", "2018-05-25")
   def className = clazzName
+  @deprecated("Legacy code that shouldn't be used for new services", "2018-05-25")
   def parameterTypes = method.getParameterTypes
+  @deprecated("Legacy code that shouldn't be used for new services", "2018-05-25")
   def name = method.getName
+  @deprecated("Legacy code that shouldn't be used for new services", "2018-05-25")
   def returnsUnit = {
     val rt = method.getReturnType
     (rt eq classOf[Unit]) || (rt eq classOf[Null]) || (rt eq java.lang.Void.TYPE)
   }
+  @deprecated("Legacy code that shouldn't be used for new services", "2018-05-25")
   def returnsFuture = classOf[Future[_]] isAssignableFrom method.getReturnType
 
   private def getTarget = if (targetRef ne null) targetRef else throw new NonexistentTargetException
 
+  @deprecated("Legacy code that shouldn't be used for new services", "2018-05-25")
   def apply() = methodProxy.invoke(getTarget, args)
-
+  @deprecated("Legacy code that shouldn't be used for new services", "2018-05-25")
   def apply(newTarget: T) = methodProxy.invoke(newTarget, args)
+  @deprecated("Legacy code that shouldn't be used for new services", "2018-05-25")
   def apply(newArgs: Array[AnyRef]) = methodProxy.invoke(getTarget, newArgs)
+  @deprecated("Legacy code that shouldn't be used for new services", "2018-05-25")
   def apply(newTarget: T, newArgs: Array[AnyRef]) = methodProxy.invoke(newTarget, newArgs)
 }
